#+title: Change log for Emacs-enhanced
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for Emacs-enhanced

* Versions

** <2025-01-11>

shell/eshell - improve history management and completion

- Add `my/load-bash-history` to load `.bash_history` into `comint-input-ring`.
- Add `my/shell-history-complete` for shell history completion (`M-r`).
- Introduce `my/eshell-history-capf` and `my/shell-history-capf` for dynamic shell/eshell history completions.
- Setup `completion-at-point` integrations for shell and eshell history.
- Customize `completion-category-overrides` for improved matching in eshell and shell modes.

** <2025-01-11>

- =consult-history= potential replacement using enhanced eshell setup
  - Appended Bash history to eshell history on load.
  - Introduced `my/eshell-history-completing-read`.
  - Added `M-r` for eshell history search.
    
** <2025-01-08>

- Added open-with replacement using dired.
- Replacing =dired-async-mode= with =my/rsync= function to enable asynchronous copy directly from dired.
- Bind `C` in `dired-mode-map` to invoke the new rsync functionality.

** <2025-01-07>

Add eglot replacement using custom etags functions and keybindings

- Added `my/etags-load`: Locate and load the nearest TAGS file.
- Added `my/etags-update`: Generate etags using an external script if available.
- Added `my/generate-etags`: Recursively create etags for C, C++, C#, and Ada files.
- Introduced `predicate-exclusion-p` for directory exclusion logic.
- Bound `my/etags-load` to `C-x p l` and `my/etags-update` to `C-x p u`.

** <2025-01-05>

icomplete-in-buffer setup and completion functions to try and replace corfu/company

- Added `(setq icomplete-in-buffer t)` to improve in-buffer completion behavior.