@@ -21,6 +21,16 @@ Used in concert with https://github.com/captainflasmr/Emacs-core
 
 * Whats New
 
+** <2025-01-15>
+
+Enhance Eshell keybinding setup with compatibility and fallbacks
+
+- Refactored Eshell keybindings setup:
+  - Introduced `my/setup-eshell-keybindings` to handle version compatibility and fallbacks.
+  - Added conditional checks for `eshell-hist-mode-map`, `eshell-mode-map`, and `eshell-cmpl-mode-map` to ensure compatibility with different Emacs versions.
+  - Assigned `M-r` to `my/eshell-history-completing-read` and unbound `M-s` when applicable.
+  - Added `C-M-i` for `completion-at-point` with fallback to general key maps when specific maps aren't available.
+
 ** <2025-01-11>
 
 shell/eshell - improve history management and completion
@@ -761,8 +771,30 @@ The third one can be roughly accomplished by passing eshell history through =com
 (setq eshell-history-size 10000)
 (setq eshell-save-history-on-exit t)
 (setq eshell-hist-ignoredups t)
-(with-eval-after-load 'em-hist
-  (define-key eshell-hist-mode-map (kbd "M-r") #'my/eshell-history-completing-read))
+;; Eshell configuration with version compatibility and fallbacks
+(defun my/setup-eshell-keybindings ()
+  "Setup eshell keybindings with version compatibility checks and fallbacks."
+  ;; Try modern mode-specific maps first
+  (with-eval-after-load 'em-hist
+    (if (boundp 'eshell-hist-mode-map)
+        (progn
+          (define-key eshell-hist-mode-map (kbd "M-r") #'my/eshell-history-completing-read)
+          (define-key eshell-hist-mode-map (kbd "M-s") nil))
+      ;; Fallback to eshell-mode-map if specific mode maps don't exist
+      (when (boundp 'eshell-mode-map)
+        (define-key eshell-mode-map (kbd "M-r") #'my/eshell-history-completing-read)
+        (define-key eshell-mode-map (kbd "M-s") nil))))
+  (with-eval-after-load 'em-cmpl
+    ;; Add completion category overrides
+    (add-to-list 'completion-category-overrides
+                 '(eshell-history (styles basic substring initials)))
+    ;; Try modern completion map first, fallback to general map
+    (if (boundp 'eshell-cmpl-mode-map)
+        (define-key eshell-cmpl-mode-map (kbd "C-M-i") #'completion-at-point)
+      (when (boundp 'eshell-mode-map)
+        (define-key eshell-mode-map (kbd "C-M-i") #'completion-at-point)))))
+;;
+(add-hook 'eshell-mode-hook #'my/setup-eshell-keybindings)
 #+end_src
 
 Note: I needed to transfer the local shell history into eshell for a better history experience.
@@ -1068,10 +1100,6 @@ More bonus points here for in buffer completion in shells, this includes eshell 
 ;;
 (add-hook 'eshell-mode-hook #'my/setup-eshell-history-completion)
 ;;
-(with-eval-after-load 'em-cmpl
-  (add-to-list 'completion-category-overrides
-               '(eshell-history (styles basic substring initials)))
-  (define-key eshell-cmpl-mode-map (kbd "C-M-i") #'completion-at-point))
 #+end_src
 
 *** DOING capf for =shell=
@@ -1212,7 +1240,6 @@ Lets try and see how far we can get going through the =org-publish= mechanism fo
 (defun my-org-publish-split-headings (plist filename pub-dir)
   "Split an Org file into separate files, each corresponding to a top-level heading
 that is marked as DONE.
-
 Each file name is prefixed with the date in YYYYMMDD format extracted from the
 :EXPORT_HUGO_LASTMOD: property. PLIST is the property list for the publishing
 process, FILENAME is the input Org file, and PUB-DIR is the publishing directory."
@@ -1504,8 +1531,6 @@ Does dired actions asynchronously, originally I thought this was built-in but I 
 Could I just call out to =async-shell-command=, something like:
 
 #+begin_src elisp
-(define-key dired-mode-map (kbd "C") 'my/rsync)
-;;
 (defun my/rsync (dest)
   "Rsync copy."
   (interactive
